added the eclipsestore test